# opengl-terrain

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
assets/shaders/: skybox.frag  skybox.fs  skybox.vert  skybox.vs  solid_color.fs  solid_color.vert  sprite.fs  sprite.vert  sprite.vs  terrain.frag  terrain.fs  terrain.geom  terrain.tesc  terrain.tese  terrain.vert  terrain.vs  water.frag  water.fs  water.vert  water.vs
lib/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
lib/src/: glad.c
src/: application.cpp  application.h  camera.cpp  camera.h  frame_buffer.cpp  frame_buffer.h  game.cpp  game.h  heightmap_renderer.cpp  heightmap_renderer.h  main.cpp  normalmap_renderer.cpp  normalmap_renderer.h  quad.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  terrain.cpp  terrain.h  texture.cpp  texture.h  util.cpp  util.h
src/components/: components.h
src/gui/: gui_layer.cpp  gui_layer.h  gui_panel.h  gui_skybox.cpp  gui_skybox.h  gui_sun.cpp  gui_sun.h  gui_terrain.cpp  gui_terrain.h  gui_water.cpp  gui_water.h
src/light/: directional_light.cpp  directional_light.h
src/mesh/: buffer.cpp  buffer.h  mesh.cpp  mesh.h  plane.h  quad.h  sphere.cpp  sphere.h  vertex.h  vertex_array.cpp  vertex_array.h
src/render/: render_context.h  renderer.h
src/skybox/: skybox.cpp  skybox.h
src/terrain/: heightmap_renderer.cpp  heightmap_renderer.h  normalmap_renderer.cpp  normalmap_renderer.h  terrain.cpp  terrain.h  terrain_config.h  terrain_node.cpp  terrain_node.h
src/utils/: heightmap_generator.cpp  (+1 more)
(+18 files in other folders)
